--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "devDependencies": {
     "@types/bun": "^1.1.6",
+    "@types/node-fetch": "^2.6.11",
     "gulp": "^5.0.0",
     "gulp-replace": "^1.1.4",
     "yargs": "^17.7.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
